# OCR

./: .gitattributes  .gitignore  leap.yaml  leap_binder.py  pyproject.toml
easyocr/: general_utils.py  recognition.py  utils.py
model/: convert_detection_model_to_onnx.py  convert_recognition_model_to_onnx.py  craft.onnx  detection_inference.py  recog.onnx  recognition_inference.py
