[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["ranhomri <ran.homri@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "1.10.1"
torchvision = "0.11.2"
opencv-python-headless = "^4.8.1.78"
scipy = "^1.11.4"
pillow = "^10.1.0"
scikit-image = "^0.22.0"
python-bidi = "^0.4.2"
pyyaml = "^6.0.1"
shapely = "^2.0.2"
pyclipper = "^1.3.0.post5"
ninja = "^1.11.1.1"
code-loader = "^1.0.29"
tensorflow = "2.11.0"
onnx = "1.11.0"
onnxruntime = "1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
